# filestorage

./: .pre-commit-config.yaml  AGENTS.md  README.md  setup.py
.github/workflows/: tests.yml
backend/: .gitignore  manage.py  pyproject.toml  setup.py
backend/api/: models.py  tests.py  urls.py  views.py  views_extension.py
backend/api/desktop/: clip_application.py  compare_application.py  crop_application.py  label_application.py  modify_application.py  multitag_application.py  tag_application.py  view_application.py
backend/api/desktop/tests/: test_clip_application.py  test_compare_application.py  test_crop_application.py  test_label_application.py  test_modify_application.py  test_multitag_application.py  test_tag_application.py  test_view_application.py
backend/api/management/commands/: cleandb.py  desktop.py  qtservice.py  rs.py  setup.py  tkservice.py  watchdog_listener.py  web.py
backend/api/qtservice/: clip_application.py  compare_application.py  crop_application.py  label_application.py  modify_application.py  multitag_application.py  tag_application.py  view_application.py
backend/api/qtservice/tests/: conftest.py  test_clip_application.py  test_compare_application.py  test_crop_application.py  test_label_application.py  test_modify_application.py  test_multitag_application.py  test_tag_application.py  test_view_application.py
backend/api/tkservice/: clip_application.py  compare_application.py  crop_application.py  label_application.py  modify_application.py  multitag_application.py  tag_application.py  view_application.py
backend/api/utils/: key_paths.py  process_images.py
backend/filestoragebackend/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: run_tests.py
frontend/: next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/react-mui/: fileuploadbutton.tsx  signinpage.tsx
(+12 files in other folders)
