[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
"django",
"django-extensions",
"dotenv",
"watchdog==2.2",
"djangorestframework",
"djangorestframework-simplejwt",
"pillow",
"ultralytics",
"moviepy",
"opencv-python",
"transformers",
"werkzeug==2.0.0",
"pyOpenSSL",
"django-cors-headers",
"tkvideo",
"coverage",
"pyside6",
"python-vlc",
]

[tool.coverage.run]
branch = true
source = ["api", "filestoragebackend"]
omit = [
  "*/migrations/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]

[tool.coverage.html]
directory = "htmlcov"

[dependency-groups]
dev = [
    "ty>=0.0.12",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["api"]
qt_api = "pyside6"
